# api

./: .env.sample  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml
.github/workflows/: smokeshow.yml  tests.yml
app/: Dockerfile  logging.yaml  main.py  pyproject.toml
app/alembic/: env.py
app/alembic/versions/: 1be7e5af2d2f_create_match_stats_model.py  49d59174ccdb_create_match_stats_model.py  7469093c6155_change_stats_id_by_2_new_apis.py  7b263fb2931f_create_tables.py  e58707dc09f9_create_tables.py
app/api/: main.py
app/api/v1/: __init__.py  competitions.py  simulations.py  teams.py
app/core/: base_model.py  config.py  db.py  dependencies.py  security.py
app/core/dependencies/: __init__.py  base.py  matches_data_extraction.py
app/initial_data/: leagues.json  teams.json
app/libs/football_data_api/: __init__.py  service.py
app/libs/football_stats_api/: __init__.py  service.py
app/libs/livescore_api/: __init__.py  service.py
app/libs/predictor/: __init__.py  predictor.py
app/libs/transfermarkt_api/: __init__.py  service.py
app/models/: __init__.py  competitions.py  matches.py  matchs.py  predictions.py  teams.py
app/predictor/: __init__.py  models.py  predictor.py
app/tests/: conftest.py
