[project]
name = "foot-predictor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "logging>=0.4.9.6",
    "pydantic-settings>=2.5.2",
    "pydantic>=2.9.2",
]

[tool.uv]
dev-dependencies = [
    "coverage>=7.6.1",
    "httpx>=0.27.2",
    "mypy>=1.11.2",
    "pre-commit>=4.0.1",
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.9",
]

[tool.pytest.ini_options]
cache_dir = ".pytest_cache"
python_files = "tests_*.py"

[tool.coverage.run]
omit = [
    "**/__init__.py",
    "tests/*",
]

[tool.mypy]
strict = true
plugins = [
    "pydantic.mypy",
]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
]
ignore = [
    "E501",
    "B008",
    "W191",
    "B904",
]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true
