[project]
name = "foot-predictor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.6",
    "logging>=0.4.9.6",
    "pydantic-settings>=2.7.0",
    "pydantic>=2.10.4",
    "sqlmodel>=0.0.22",
    "httpx>=0.28.1",
    "alembic>=1.14.0",
    "psycopg>=3.2.3",
    "numpy>=2.2.1",
    "pandas>=2.2.3",
    "bcrypt>=4.2.1",
]

[tool.uv]
dev-dependencies = [
    "coverage>=7.6.9",
    "mypy>=1.14.0",
    "pandas-stubs>=2.2.3.241126",
    "pre-commit>=4.0.1",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.4",
    "sqlalchemy[mypy]>=2.0.36",
]

[tool.pytest.ini_options]
cache_dir = ".pytest_cache"
python_files = "tests_*.py"

[tool.coverage.run]
omit = [
    "alembic/*",
    "**/__init__.py",
    "tests/*",
]

[tool.mypy]
exclude = ["alembic"]
plugins = [
    "pydantic.mypy",
    "sqlalchemy.ext.mypy.plugin"
]

[tool.ruff]
target-version = "py313"
exclude = ["alembic"]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
]
ignore = [
    "E501",
    "B008",
    "W191",
    "B904",
]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true
